--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
 	},
 	"dependencies": {
 		"pinia": "^2.1.6",
-		"vue": "^3.3.4"
+		"vue": "^3.3.4",
+		"vue-toastification": "^2.0.0-rc.5"
 	},
 	"devDependencies": {
 		"@rushstack/eslint-patch": "^1.5.0",
-		"@vue/eslint-config-airbnb": "^7.0.0",
 		"@vitejs/plugin-vue": "^4.3.4",
+		"@vue/eslint-config-airbnb": "^7.0.0",
 		"eslint": "^8.49.0",
 		"eslint-plugin-vue": "^9.17.0",
 		"vite": "^4.4.9"
